# libnifpga-usrp

./: CMakeLists.txt  README.md
include/: NiFpga.h
src/: Bitfile.cpp  Bitfile.h  Common.h  DeviceFile.cpp  DeviceFile.h  DeviceInfo.cpp  DeviceInfo.h  DeviceTree.cpp  DeviceTree.h  DmaBuf.h  ErrnoMap.cpp  ErrnoMap.h  Exception.h  Fifo.cpp  Fifo.h  FifoInfo.cpp  FifoInfo.h  FileLock.cpp  FileLock.h  Makefile  NiFlexRioErrors.h  NiFpga.cpp  NiFpga.h  NiFpgaPrivate.h  PackedArray.h  PersonalityBlob.cpp  PersonalityBlob.h  RegisterInfo.cpp  RegisterInfo.h  ResourceInfo.cpp  ResourceInfo.h  Session.cpp  Session.h  Status.h  SysfsFile.cpp  SysfsFile.h  Timer.h  Type.cpp  Type.h  dtgen.cpp  (+6 more)
src/libb64/: cdecode.cpp  cdecode.h
src/linux/: dma-heap.h
src/tests/: test_PackedArray.cpp
tests/: test_PackedArray.cpp
